[Add] snowplow parsing logic back to notebook

--- a/notebooks/validate_snowplow_data.ipynb
+++ b/notebooks/validate_snowplow_data.ipynb
@@ -363,29 +363,80 @@
     }
    ],
    "source": [
-    "import gzip\n",
-    "\n",
+    "import time\n",
+    "from progressbar import ProgressBar\n",
+    "from traceback import print_exc\n",
+    "snowplow_data = []\n",
+    "bar = ProgressBar(max_value = len(snowplow_activities))\n",
+    "collector = thriftpy.load(\"collector-payload.thrift\")\n",
+    "collector_payload = collector.CollectorPayload()\n",
+    "protocol = TCyBinaryProtocolFactory()\n",
+    "for i, payload in enumerate(snowplow_activities):\n",
+    "    t0 = time.perf_counter()\n",
+    "#     bar.update(i)\n",
+    "    try:\n",
+    "        raw_payload = deserialize(collector_payload, payload, protocol)\n",
+    "    except e:\n",
+    "        print(e)\n",
+    "        input(payload)\n",
+    "    t1 = time.perf_counter()\n",
+    "    if t1 - t0 > 2:\n",
+    "        print('1. Bad payload', t1 - t0)\n",
+    "        print(payload)\n",
+    "        print()\n",
+    "    else:\n",
+    "        print('1. Good payload', t1 - t0)\n",
+    "        print(payload)\n",
+    "        print()\n",
+    "    t0 = t1\n",
+    "    querystring = raw_payload.querystring\n",
+    "    network_userid = raw_payload.networkUserId\n",
+    "    params = parse.parse_qs(querystring)\n",
+    "    t1 = time.perf_counter()\n",
+    "    if t1 - t0 > 2:\n",
+    "        print('2', t1 - t0)\n",
+    "    t0 = t1\n",
+    "    try:\n",
+    "        if params:\n",
+    "            activity_time = datetime.fromtimestamp(int(params['dtm'][0][:-3]))\n",
+    "            snowplow_data.append({\n",
+    "                \"session_date\": activity_time.date(),\n",
+    "                \"client_id\": json.loads(params['co'][0])[\"data\"][0][\"data\"][\"ampClientId\"],\n",
+    "                \"external_id\": params['page'][0],\n",
+    "                \"activity_time\": activity_time,\n",
+    "                \"event_category\": None,\n",
+    "                \"event_action\": None\n",
+    "            })\n",
+    "    except:\n",
+    "        pp(params)\n",
+    "        raise\n",
+    "    t1 = time.perf_counter()\n",
+    "    if t1 - t0 > 2:\n",
+    "        print(t1 - t0, len(payload))\n",
+    "snowplow_df = pd.DataFrame(snowplow_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "s3 = boto3.resource('s3')\n",
     "snowplow_activities = []\n",
     "bodies = []\n",
     "for obj in s3.Bucket(BUCKET_NAME).objects.all():\n",
     "    itemname = obj.key\n",
-    "    \n",
-    "    if 'enriched/good/2021/01/30' not in itemname:\n",
+    "    if '2021-01-25' not in itemname:\n",
     "        continue\n",
-    "\n",
     "    obj = s3.Object(BUCKET_NAME, itemname)\n",
-    "    with gzip.GzipFile(fileobj=obj.get()[\"Body\"]) as gzipfile:\n",
-    "        body = gzipfile.read()\n",
-    "        \n",
-    "    print(obj.key)\n",
-    "    input(body[:1000])\n",
+    "    body = obj.get()['Body'].read()\n",
     "    bodies.append(body)\n",
-    "#     contents = body.split(b'\\x0b\\x00d\\x00\\x00\\x00')\n",
-    "#     if len(contents) == 1:\n",
-    "#         input(body)\n",
-    "#     # First entry is always empty\n",
-    "#     snowplow_activities.extend(contents[1:])"
+    "    contents = body.split(b'\\x0b\\x00d\\x00\\x00\\x00')\n",
+    "    if len(contents) == 1:\n",
+    "        input(body)\n",
+    "    # First entry is always empty\n",
+    "    snowplow_activities.extend(contents[1:])"
    ]
   },
   {
@@ -397,11 +448,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 289 ms\n"
+     ]
+    }
+   ],
    "source": [
     "ga_df = pd.read_csv('../tmp/wcp_sessions_20210125-20210125_20210125-20210125.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25%                              8763\n",
+       "Load                             7437\n",
+       "50%                              5478\n",
+       "Seen                             5390\n",
+       "newsletter modal impression 1     702\n",
+       "newsletter modal impression 3     586\n",
+       "100%                              453\n",
+       "Dismissal                         319\n",
+       "Permanent Dismissal                41\n",
+       "social share                       15\n",
+       "Link Click                          7\n",
+       "newsletter signup                   1\n",
+       "Form Submission                     1\n",
+       "Name: event_action, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 22.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "ga_df.event_action.value_counts()"
    ]
   },
   {
