[change] use env vars

--- a/GA4Recs.ipynb
+++ b/GA4Recs.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from google.cloud import bigquery\n",
     "from dataclasses import dataclass\n",
-    "from datetime import date"
+    "from datetime import date, timedelta\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "from typing import List\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -20,17 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = \"vaulted-sol-400319\"\n",
+    "project = os.environ[\"GCP_PROJECT_ID\"]\n",
     "client = bigquery.Client(project=project)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,28 +43,32 @@
     "class Site:\n",
     "    ga4_property_id: str\n",
     "    \n",
-    "DALLAS_FREE_PRESS = Site(ga4_property_id=\"408618944\")\n",
-    "query_dates = [date(2023, 10, 13)]"
+    "DALLAS_FREE_PRESS = Site(ga4_property_id=os.environ[\"DALLAS_FREE_PRESS_GA4_PROPERTY_ID\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'20231013'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query_dates[0].strftime(\"%Y%m%d\")"
+    "def enumerate_query_dates(end_date: date, num_days: int) -> List[date]:\n",
+    "    return [end_date - timedelta(days=i) for i in range(0, num_days)]\n",
+    "\n",
+    "def construct_event_table_name(gcp_project_id: str, site: Site, dt: date) -> str:\n",
+    "    return f\"{gcp_project_id}.analytics_{site.ga4_property_id}.event_{dt.strftime('%Y%m%d')}\"\n",
+    "\n",
+    "num_days = 1\n",
+    "query_dates = enumerate_query_dates(date(2023, 10, 15), num_days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "construct_event_table_name(project, DALLAS_FREE_PRESS, dt=query_dates[0])"
    ]
   },
   {
