[add] code to query data

--- a/GA4Recs.ipynb
+++ b/GA4Recs.ipynb
@@ -12,6 +12,14 @@
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from typing import List\n",
+    "import time\n",
+    "from sqlalchemy.sql import func as F\n",
+    "from sqlalchemy.engine import create_engine, Engine\n",
+    "from sqlalchemy.schema import Table, MetaData\n",
+    "from sqlalchemy import Column, Integer, select, String, literal_column, text\n",
+    "from sqlalchemy.sql.expression import Select, CompoundSelect, union_all\n",
+    "from sqlalchemy_bigquery import ARRAY, STRUCT, INTEGER, FLOAT, FLOAT64 as DOUBLE, STRING\n",
+    "from enum import Enum\n",
     "\n",
     "load_dotenv()"
    ]
@@ -30,7 +38,8 @@
    "outputs": [],
    "source": [
     "project = os.environ[\"GCP_PROJECT_ID\"]\n",
-    "client = bigquery.Client(project=project)"
+    "client = bigquery.Client(project=project)\n",
+    "engine = create_engine(f\"bigquery://{project}\")"
    ]
   },
   {
@@ -56,9 +65,16 @@
     "    return [end_date - timedelta(days=i) for i in range(0, num_days)]\n",
     "\n",
     "def construct_event_table_name(gcp_project_id: str, site: Site, dt: date) -> str:\n",
-    "    return f\"{gcp_project_id}.analytics_{site.ga4_property_id}.event_{dt.strftime('%Y%m%d')}\"\n",
-    "\n",
-    "num_days = 1\n",
+    "    return f\"{gcp_project_id}.analytics_{site.ga4_property_id}.events_{dt.strftime('%Y%m%d')}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_days = 5\n",
     "query_dates = enumerate_query_dates(date(2023, 10, 15), num_days)"
    ]
   },
@@ -68,7 +84,144 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "construct_event_table_name(project, DALLAS_FREE_PRESS, dt=query_dates[0])"
+    "class StrEnum(str, Enum):\n",
+    "    def __repr__(self):\n",
+    "        return self.value\n",
+    "\n",
+    "class ColumnBigQuery(StrEnum):\n",
+    "    EVENT_TIMESTAMP = \"event_timestamp\"\n",
+    "    EVENT_NAME = \"event_name\"\n",
+    "    EVENT_PARAMS = \"event_params\"\n",
+    "    USER_PSEUDO_ID = \"user_pseudo_id\"\n",
+    "\n",
+    "class ColumnNew(StrEnum):\n",
+    "    EVENT_PAGE_LOCATION = \"event_page_location\"\n",
+    "    EVENT_ENGAGEMENT_TIME_MSEC = \"event_engagement_time_msec\"\n",
+    "\n",
+    "def construct_query_single_table(table_name: str, engine: Engine) -> Select:\n",
+    "    table = Table(\n",
+    "        table_name, \n",
+    "        MetaData(bind=engine), \n",
+    "        Column(ColumnBigQuery.EVENT_TIMESTAMP, Integer),\n",
+    "        Column(ColumnBigQuery.EVENT_NAME, String),\n",
+    "        Column(ColumnBigQuery.EVENT_PARAMS, ARRAY(STRUCT(key=STRING, value=STRUCT(string_value=STRING, int_value=INTEGER, float_value=DOUBLE)))),\n",
+    "        Column(ColumnBigQuery.USER_PSEUDO_ID, String),\n",
+    "        autoload_with=engine\n",
+    "    )\n",
+    "\n",
+    "    subquery_page_location = select(\n",
+    "        literal_column(\"value.string_value\")\n",
+    "    ).select_from(\n",
+    "        F.unnest(table.c.event_params).alias(\"params\")\n",
+    "    ).where(\n",
+    "        literal_column(\"params.key\") == \"page_location\"\n",
+    "    ).label(ColumnNew.EVENT_PAGE_LOCATION)\n",
+    "\n",
+    "    subquery_engagement_time = select(\n",
+    "        literal_column(\"value.int_value\")\n",
+    "    ).select_from(\n",
+    "        F.unnest(table.c.event_params).alias(\"params\")\n",
+    "    ).where(\n",
+    "        literal_column(\"params.key\") == \"engagement_time_msec\"\n",
+    "    ).label(ColumnNew.EVENT_ENGAGEMENT_TIME_MSEC)\n",
+    "\n",
+    "    query = select(\n",
+    "        table.c.event_timestamp,\n",
+    "        table.c.event_name,\n",
+    "        subquery_page_location,\n",
+    "        subquery_engagement_time,\n",
+    "        table.c.user_pseudo_id\n",
+    "    ).order_by(\n",
+    "        table.c.user_pseudo_id,\n",
+    "        table.c.event_timestamp\n",
+    "    )\n",
+    "\n",
+    "    return query\n",
+    "\n",
+    "def construct_query(query_dates: List[date], site: Site, engine: Engine) -> Select:\n",
+    "    queries = [construct_query_single_table(construct_event_table_name(project, site, dt), engine) for dt in query_dates]\n",
+    "    subquery = union_all(*queries).subquery()\n",
+    "    return select(subquery) # Because SQLAlchemy is dumb and doesn't allow direct stringification of a CompoundSelect\n",
+    "\n",
+    "def stringify_query(query: Select, engine: Engine) -> str:\n",
+    "    return str(query.compile(engine, compile_kwargs={\"literal_binds\": True}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = construct_query(query_dates, site=DALLAS_FREE_PRESS, engine=engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_str = stringify_query(query, engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(query_str)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NOTE:** Even if a query is less than 10 MiB, BigQuery still charges as if the query is 10 MiB. For queries less than 10 MiB, better to batch them together so the resulting query is at least 10 MiB, cutting cost."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_table_query_tib_processed(query_str: str, client: bigquery.Client) -> float:\n",
+    "    \"\"\"\n",
+    "    Return number of bytes processed by a query\n",
+    "    \"\"\"\n",
+    "    return client.query(query_str, job_config=bigquery.QueryJobConfig(dry_run=True)).total_bytes_processed\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bytes_processed = calculate_table_query_tib_processed(query_str, client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MiBs processed\n",
+    "f\"{bytes_processed / 1024**2:.2f} MiB\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TiBs processed\n",
+    "f\"{bytes_processed / 1024**4} TiB\""
    ]
   },
   {
