--- a/GA4Recs.ipynb
+++ b/GA4Recs.ipynb
@@ -226,10 +226,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1082787"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.get_table(construct_event_table_name(project, DALLAS_FREE_PRESS, dt=query_dates[0])).num_bytes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One strategy to make sure we're not wasting money given the 10 MiB minimum charge per query\n",
+    " TODO: A function that, given a site name, a list of dates, and a query bytes floor of FLOOR = 10 MiB & some CEIL,\n",
+    "- first, iterate along the list of dates until the cumulative total storage of the tables is greater than FLOOR\n",
+    "- then, interate and build query string as we go, until total bytes processed is just under CEIL\n",
+    "- return the query string\n",
+    "- if there are more dates left, repeat the process\n",
+    "\n",
+    "\n",
+    "Or caching: https://cloud.google.com/bigquery/docs/cached-results, but caches are only valid for at most 24 hours.\n",
+    "Could instead build our own cache; construct a dedicated events table that only keeps fetched events up to a certain threshold (say, 1 month if 1 month of events are needed to train recs; anything older would be deleted), \n",
+    "but for small sites (and even bigger ones) this is probably overkill, though would still be nice to have "
+   ]
   }
  ],
  "metadata": {
