[add] cost stuff

--- a/GA4Recs.ipynb
+++ b/GA4Recs.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from google.cloud import bigquery\n",
     "from dataclasses import dataclass\n",
-    "from datetime import date, timedelta\n",
+    "from datetime import date, timedelta, datetime\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from typing import List\n",
@@ -20,6 +20,7 @@
     "from sqlalchemy.sql.expression import Select, CompoundSelect, union_all\n",
     "from sqlalchemy_bigquery import ARRAY, STRUCT, INTEGER, FLOAT, FLOAT64 as DOUBLE, STRING\n",
     "from enum import Enum\n",
+    "import pandas as pd\n",
     "\n",
     "load_dotenv()"
    ]
@@ -138,10 +139,10 @@
     "\n",
     "    return query\n",
     "\n",
-    "def construct_query(query_dates: List[date], site: Site, engine: Engine) -> Select:\n",
-    "    queries = [construct_query_single_table(construct_event_table_name(project, site, dt), engine) for dt in query_dates]\n",
-    "    subquery = union_all(*queries).subquery()\n",
-    "    return select(subquery) # Because SQLAlchemy is dumb and doesn't allow direct stringification of a CompoundSelect\n",
+    "# def construct_query(query_dates: List[date], site: Site, engine: Engine) -> Select:\n",
+    "#     queries = [construct_query_single_table(construct_event_table_name(project, site, dt), engine) for dt in query_dates]\n",
+    "#     subquery = union_all(*queries).subquery()\n",
+    "#     return select(subquery) # Because SQLAlchemy is dumb and doesn't allow direct stringification of a CompoundSelect\n",
     "\n",
     "def stringify_query(query: Select, engine: Engine) -> str:\n",
     "    return str(query.compile(engine, compile_kwargs={\"literal_binds\": True}))"
@@ -153,7 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = construct_query(query_dates, site=DALLAS_FREE_PRESS, engine=engine)"
+    "# query = construct_query(query_dates, site=DALLAS_FREE_PRESS, engine=engine)\n",
+    "query = construct_query_single_table(construct_event_table_name(project, DALLAS_FREE_PRESS, date(2023, 10, 15)), engine=engine)"
    ]
   },
   {
@@ -187,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_table_query_tib_processed(query_str: str, client: bigquery.Client) -> float:\n",
+    "def calculate_table_query_processed(query_str: str, client: bigquery.Client) -> float:\n",
     "    \"\"\"\n",
     "    Return number of bytes processed by a query\n",
     "    \"\"\"\n",
@@ -201,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bytes_processed = calculate_table_query_tib_processed(query_str, client)"
+    "bytes_processed = calculate_table_query_processed(query_str, client)"
    ]
   },
   {
@@ -226,22 +228,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1082787"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "client.get_table(construct_event_table_name(project, DALLAS_FREE_PRESS, dt=query_dates[0])).num_bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_query(query_str: str, client: bigquery.Client) -> pd.DataFrame:\n",
+    "    job_config = bigquery.QueryJobConfig(dry_run=False, use_query_cache=True)\n",
+    "    response = client.query(query_str, job_config=job_config)\n",
+    "    print(f\"Estimated bytes processed: {response.estimated_bytes_processed}\")\n",
+    "    print(f\"Total bytes processed: {response.total_bytes_processed}\")\n",
+    "    print(f\"Bytes billed: {response.total_bytes_billed}\")\n",
+    "    print(f\"Maximum bytes billed: {response.maximum_bytes_billed}\")\n",
+    "    print(f\"Use cache? {response.cache_hit}\")\n",
+    "    print(f\"Billing tier: {response.billing_tier}\")\n",
+    "    print(f\"Maximum billing tier: {response.maximum_billing_tier}\")\n",
+    "    return response.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = run_query(stringify_query(construct_query_single_table(construct_event_table_name(project, DALLAS_FREE_PRESS, datetime(2023, 10, 14)), engine), engine), client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetime.utcfromtimestamp(1697342704240552 // 10**6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datetime.utcfromtimestamp(1697427692856875 // 10**6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = list(client.list_datasets(include_all=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[d.dataset_id for d in datasets]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = list(client.list_tables('_45e69398aeb5041b799eec00abe2010a228f0319'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = tables[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.expires"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.full_table_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table.created"
    ]
   },
   {
@@ -256,10 +374,19 @@
     "- if there are more dates left, repeat the process\n",
     "\n",
     "\n",
-    "Or caching: https://cloud.google.com/bigquery/docs/cached-results, but caches are only valid for at most 24 hours.\n",
+    "Or caching: https://cloud.google.com/bigquery/docs/cached-results, but caches are only valid for at most 24 hours and we cannot use wildcards (e.g., `gcp-project.dataset.events*`) in table names.\n",
     "Could instead build our own cache; construct a dedicated events table that only keeps fetched events up to a certain threshold (say, 1 month if 1 month of events are needed to train recs; anything older would be deleted), \n",
-    "but for small sites (and even bigger ones) this is probably overkill, though would still be nice to have "
+    "but for small sites (and even bigger ones) this is probably overkill.\n",
+    "\n",
+    "_Conclusion:_ Let's query whole days and utilize cache for now. If costs get to big, can start looking into longer-term cache (above), or table clustering & partitioning."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
